GTM OAuth Release Notes

Project site:     http://code.google.com/p/gtm-oauth/
Discussion group: http://groups.google.com/group/gtm-oauth

22-Mar-2011

Added +scopeWithStrings: utility method.


18-Oct-2010

Fix issue handling URLs with ports. (thanks dunhamsteve)


4-Oct-2010

Update SignIn object to retain the controller during sign-in.


Release 1.0.0
9-Sept-2010

Initial public release.